2002-02-21  Mo DeJong  <supermo@bayarea.net>

        * gui/preferences.tcl (AddProject): Change
        [info encodings] call to [encoding names].
        The info subcommand was a local Tcl modification
        that did not survive the 8.3 upgrade process.

2002-02-20  Mo DeJong  <supermo@bayarea.net>

        * INSTALL.TXT: Indicate that users should install
        into /opt/sourcenav by default so as to avoid
        version conflicts in supporting packages.
        Add note about -MD in the CFLAGS and --host=windows32
        on the configure line when compiling with VC++.
        * README.TXT: Mention INSTALL.TXT not INSTALL.

2002-02-04  Mo DeJong  <supermo@bayarea.net>

	* gui/makepane.tcl (Make): When initially
	opening the build window select the
	<External Makefile> target.

2002-02-04  Mo DeJong  <supermo@bayarea.net>

	* MAINTAINERS: Update email addressed for
	Syd and Mo. Add note about not contacting
	maintainers.

2002-02-04  Mo DeJong  <supermo@bayarea.net>

	* gui/combo.tcl (-state, -readonly): Implement a read
	only entry widget with a binding that ignores all
	key press events. The previous implementation depended
	on a local modification that added a -state readonly
	property to the entry widget. We can't depend on that
	modification since it will not exist in a system
	install of Tk 8.3.
	* tests/gui/combo.test: Add test case for selecttext
	member function.

2002-02-04  Mo DeJong  <supermo@bayarea.net>

	* INSTALL.TXT: Add missing file.
	* README.TXT: Add missing file.

2002-02-01  Ian Roxborough  <irox@redhat.com>

	* Makefile.am: Changed hardcoded
	tcl/tk path names to reflex the current repository.
	* configure.in: Ditto.
	* Makefile.in: Regenerated.
	* configure: Ditto.
	* bitmaps/Makefile.in: Ditto.
	* db/Makefile.in: Ditto.
	* etc/Makefile.in: Ditto.
	* gui/Makefile.in: Ditto.
	* hyper/Makefile.in: Ditto.
	* misc/libutils/Makefile.in: Ditto.
	* parsers/chill/Makefile.in: Ditto.
	* parsers/cobol/Makefile.in: Ditto.